<resources>
    <string name="app_name">Love Coupon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="face_login">Facebook</string>
    <string name="g_login">Google</string>
    <string name="you_are">You are</string>
    <string name="shop">Shop</string>
    <string name="customer">Customer</string>
    <string name="not_fill_login">Your user or password do not match</string>
    <string name="title_activity_test_qrcode">TestQRCode</string>
    <string name="reload">Other Code</string>
    <string name="exit">Logout</string>
    <string name="add_coupon">New coupon template</string>
    <string name="add_message">Add News</string>

    <string name="money">Amount</string>
    <string name="title">Title </string>
    <string name="content">Content </string>
    <string name="link">Link</string>
    <string name="date">Deadline</string>

    <string name="description">Description</string>
    <string name="limit">Duration</string>
    <string name="month">Month</string>
    <string name="add_coupon_success">Add coupon successfully</string>
    <string name="add_coupon_fail">Failed to add coupon </string>
    <string name="delete_coupon_success">Delete coupon successfully</string>
    <string name="delete_coupon_fail">Failed to delete coupon</string>

    <string name="add_message_success">Add news successfully</string>
    <string name="add_message_fail">Failed to add news</string>


    <string name="title_delete_coupon">Delete coupon</string>
    <string name="content_delete_coupon">Are you sure to delete this coupon</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="qrcode">Scan Coupon</string>
    <string name="name_company">Shop name</string>
    <string name="address_company">Shop address</string>
    <string name="username1">Username1</string>
    <string name="content_icon">Image of User</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="facebook_app_id">1073363172685474</string>
    <string name="fb_login_protocol_scheme">fb1073363172685474</string>
    <string name="price">123234</string>
    <string name="txt_time_coupon">30</string>
    <string name="check_admin">Admin</string>
    <string name="save">save</string>
    <string name="my_coupon">Coupons</string>
    <string name="news">Notifications</string>
    <string name="history">History</string>
    <string name="setting">Settings</string>
    <string name="title_news">Promotion</string>
    <string name="qr_code">QRCode</string>


    <string name="time_news">May 20, 2016</string>
    <string name="share">Share</string>

    <string name="create">CREATE</string>
    <string name="used">USED</string>
    <string name="add">AddMessage</string>
    <string name="delete">Delete</string>
    <string name="show_password">Show Password</string>
    <string name="like">Like</string>
    <string name="share_news">Share</string>
    <string name="more">More</string>
    <string name="show_images">Images</string>
    <string name="coupon_of">Coupon</string>
    <string name="login_fails">Account or password is incorrect</string>
    <string name="login_google_fails">Sign google fails</string>
    <string name="google_login">google</string>
    <string name="create_news">CREATE NEWS</string>
    <string name="images_chose_is_exists">Select the picture you just made in the list of selected photos</string>
    <string name="username2">Username 2</string>
    <string name="user_error">Simply enter your username</string>
    <string name="enter_password">Password can not be blank</string>
    <string name="title_share">We are like you, love coupons and promotions</string>
    <string name="contact">Contact Our Team:</string>
    <string name="support">info@lovecoupon.com</string>
    <string name="web">www.lovecoupon.com</string>
    <string name="please_question">Please contact us if you have any question</string>
    <string name="love_coupon">Love Coupon</string>
    <string name="delete_news">Do you want to delete this news</string>
    <string name="exit_alert">Do you want to exit</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="delete_news_success">Message is deleted</string>
    <string name="all_news">All</string>
    <string name="history_news">Delete News</string>
    <string name="share_love_coupon">The app for shop and beloved customers</string>
    <string name="description_love_coupon">With LoveCoupon, the shops can reward coupons and send promotions to beloved customers easily
, the customers do not need to bring paper coupons and never miss any promotions from favorite shops </string>

    <string name="face_image">https://graph.facebook.com/%1$s/picture?type=large</string>
    <string name="like_news">Bookmark</string>
    <string name="news_delete">Delete News</string>
    <string name="near_news">News Near</string>
    <string name="connect_network">Waiting for network</string>
    <string name="changedate">Change</string>

    <string name="news_more">Other News</string>

    <string name="delete_news_error">Delete Message Error</string>
    <string name="date_menu">AUG 10, 2016</string>
    <string name="login_success">Login successfully</string>
    <string name="save_running">Saving</string>
    <string name="delete_coupon">Do you want to delete this Coupon</string>
    <string name="post">Post</string>
    <string name="time_coupon_template" formated="false">%1$s days</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="check_network">Internet connection is not available</string>
    <string name="time_shelf">40</string>
    <string name="fit_images">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="text_done" formated="false">Done(%1$S)</string>
    <string name="take_camera">Take photo</string>
    <string name="text_3_4">3:4</string>
    <string name="text_4_3">4:3</string>
    <string name="text_9_16">9:16</string>
    <string name="text_16_9">16:9</string>
    <string name="free">4:3</string>
    <string name="text_7_5">7:5</string>
    <string name="circle">CIRCLE</string>
    <string name="circle_square">CIRCLE_SQUARE</string>
    <string name="all_image">All images</string>
    <string name="crop_images">Chose Images Crop</string>

    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="permission_denied">Permission was denied. Please consider granting it in order to use all features.</string>
    <string name="permission_denied_never_ask_again">Permission was denied with never ask again.</string>
    <string name="external">SDcard</string>
    <string name="internal">Internal storage</string>
    <string name="message_max_num">Up to %1$s photos can be selected</string>
    <string name="coupon">Coupons</string>
    <string name="coupon_used">Coupon was used</string>
    <string name="you_add_news_coupon">You have added a new coupon</string>
    <string name="title_qr_code">QR Code  %1$S coupon</string>
    <string name="edit_news">Edit</string>
    <string name="check_account">*Existing</string>

    <string-array name="month">
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4 months</item>
        <item>5 months</item>
        <item>6 months</item>
        <item>7 months</item>
        <item>8 months</item>
        <item>9 months</item>
        <item>10 months</item>
        <item>11 months</item>
        <item>12 months</item>
    </string-array>

    <string-array name="title_history">
        <item>Create</item>
        <item>Use</item>
    </string-array>
    <string name="account_exists">*Exists</string>
    <string name="up_loading">Uploading</string>
    <string name="only_admin">Only admin</string>


    <string name="icon_calendar">\uf133</string>
    <string name="icon_clock">\uf017</string>
    <string name="ic_heart">\uf004</string>
    <string name="ic_share">\uf064</string>
    <string name="ic_delete">\uf00d</string>
    <string name="ic_email">\uf0e0</string>
    <string name="ic_start">\uf006</string>
    <string name="ic_start_like">\uf005</string>
    <string name="ic_globe">\uf0ac</string>
    <string name="icon_picture">\uf03e</string>
    <string name="icon_more">\uf142</string>
    <string name="bookmark">Bookmark</string>
    <string name="ic_close">\uf00d</string>
    <string name="ic_calendar_message">\uf073</string>
    <string name="icon_bell">\uf0a2</string>

    <string name="forgot_password"> <u>Forgot password</u></string>
    <string name="title_forget_password">Forgot password</string>
    <string name="email">Email</string>
    <string name="send_email">Send</string>
    <string name="user_dont_empty">Email do not empty</string>
    <string name="email_do_not_match">Email is not correct</string>
    <string name="cancel_camera">User cancelled image capture</string>
    <string name="send_email_success">Password was sent to your email</string>
    <string name="send_email_fails">Send Email fail</string>
    <string name="text_back"><u>Back</u></string>
    <string name="title_activity_scan_qrcode">ScanQRcodeActivity</string>
    <string name="grant_read_storage">Please grant access picture permission to use the picture</string>
    <string name="grant_camera">Please grant camera permission to use the QR Scanner</string>
    <string name="grant_get_account">Please grant get account  permission to use the contact</string>


</resources>
