<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/ic_loyalty_black_24dp"
            android:title="@string/my_coupon" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_brightness_low_black_24dp"
            android:title="@string/setting" />
        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/exit" />

    </group>

</menu>
