<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->


    <!--</group>-->

    <item
        android:id="@+id/nav_coupon"
        android:icon="@drawable/ic_loyalty_black_24dp"
        android:title="@string/my_coupon" />
    <item
        android:id="@+id/nav_new"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/news" />

    <item
        android:id="@+id/nav_new_more"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/news_more" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/exit" />
</menu>
