<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_add_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="@dimen/size_20"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColor="@drawable/text_color" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/content"
        android:textColor="@drawable/text_color"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="150"
        app:met_primaryColor="?colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textSize="@dimen/size_18sp" />

        <TextView
            android:id="@+id/date_add_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_18sp" />

        <com.ln.views.IconTextView
            android:id="@+id/text_change_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:paddingEnd="@dimen/size_10"
            android:paddingLeft="@dimen/size_10"
            android:paddingRight="@dimen/size_10"
            android:paddingStart="@dimen/size_10"
            android:text="@string/ic_calendar_message"
            android:textColor="@color/icon_heart"
            android:textSize="@dimen/size_24sp" />
    </LinearLayout>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link"
        android:textColor="@drawable/text_color" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_select_images"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_100"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="4dp"
        android:fastScrollEnabled="true"
        android:focusable="true"
        android:layoutAnimation="@anim/list_anim"
        android:listSelector="@android:color/transparent"
        android:scrollbars="horizontal"
        android:visibility="gone" />


    <com.ln.views.IconTextView
        android:id="@+id/img_selected_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_coupon"
        android:padding="@dimen/size_2"
        android:text="@string/icon_picture"
        android:textColor="@color/icon_heart"
        android:textSize="@dimen/size_24sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_add_messages"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/post"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </android.support.v7.widget.CardView>

</LinearLayout>
