<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_login_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_love_coupon"
    android:orientation="horizontal"
    android:weightSum="5">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:text="abc"
            android:textColor="@drawable/text_color" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="12345"
            android:textColor="@drawable/text_color" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15sp" />

        <Button
            android:id="@+id/btn_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_facebook"
            android:text="@string/face_login"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15sp" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_google"
            android:text="@string/google_login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>
