<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_love_coupon"
    android:orientation="horizontal"
    android:weightSum="5">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:paddingBottom="@dimen/size_10"
            android:paddingTop="@dimen/size_10"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/size_18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/size_10"
            android:paddingTop="@dimen/size_10"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/size_18sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textScaleX="1.1"
            android:textSize="@dimen/size_15sp" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_facebook"
            android:text="@string/face_login"
            android:textColor="@color/white"
            android:textScaleX="1.1"
            android:textSize="@dimen/size_15sp" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_google"
            android:text="@string/google_login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textScaleX="1.1"
            android:textSize="@dimen/size_15sp" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center"
            android:padding="@dimen/size_10"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>
