<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_add_message"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColor="@drawable/text_color"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:textColor="@drawable/text_color"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="150"
        app:met_primaryColor="?colorAccent" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18dp"/>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link"
        android:textColor="@drawable/text_color"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        card_view:cardElevation="6dp">

        <TextView android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="TẠO TIN" />

    </android.support.v7.widget.CardView>

</LinearLayout>
